--- a/template2 copy.html
+++ b/template2 copy.html
@@ -341,7 +341,18 @@
                                             <table width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation">
                                              <tr>
                                               <th valign="top" align="left" style="text-align: left; font-weight: normal; line-height: 1;">
+                                               <!--[if mso]>
+            <table border="0" cellpadding="0" cellspacing="0" role="presentation" align="left" style="border-collapse: separate; border-spacing: 0;">
+                <tr>
+                    <td valign="middle" align="center" style="border-radius: 5px 5px 5px 5px; background-color: #cccccc; text-align:center; color: #ffffff; padding: 2px 5px 2px 5px; mso-padding-left-alt: 0; margin-left:5px;" bgcolor="#cccccc">
+                                        <a class="pc-font-alt" style="display: inline-block; text-decoration: none; font-variant-ligatures: normal; font-family: 'Inter', Arial, Helvetica, sans-serif; font-weight: 500; font-size: 16px; line-height: 24px; letter-spacing: -0.2px; text-align: center; color: #000000;" target="_blank"><span style="display: block;"><span>2 Days</span></span></a>
+                                    </td>
+                </tr>
+            </table>
+            <![endif]-->
+                                               <!--[if !mso]><!-- -->
                                                <a style="display: inline-block; box-sizing: border-box; border-radius: 5px 5px 5px 5px; background-color: #cccccc; padding: 2px 5px 2px 5px; font-family: 'Inter', Arial, Helvetica, sans-serif; font-weight: 500; font-size: 16px; line-height: 24px; letter-spacing: -0.2px; color: #000000; vertical-align: top; text-align: center; text-align-last: center; text-decoration: none; -webkit-text-size-adjust: none;" target="_blank"><span style="display: block;"><span>{{tag}}</span></span></a>
+                                               <!--<![endif]-->
                                               </th>
                                              </tr>
                                             </table>
@@ -353,7 +364,44 @@
                                       </table>
                                      </td>
                                      {% endfor %}
-
+                                     <td class="pc-grid-td-last pc-w620-itemsSpacings-0-30" valign="top" style="padding-top: 0px; padding-right: 0px; padding-bottom: 0px; padding-left: 5px;">
+                                      <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse: separate; border-spacing: 0;">
+                                       <tr>
+                                        <td align="left" valign="top">
+                                         <table align="left" border="0" cellpadding="0" cellspacing="0" role="presentation">
+                                          <tr>
+                                           <td align="left" valign="top">
+                                            <table width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation">
+                                             <tr>
+                                              <th valign="top" align="left" style="text-align: left; font-weight: normal; line-height: 1;">
+                                               <!--[if mso]>
+            <table border="0" cellpadding="0" cellspacing="0" role="presentation" align="left" style="border-collapse: separate; border-spacing: 0;">
+                <tr>
+                    <td valign="middle" align="center" style="border-radius: 5px 5px 5px 5px; background-color: #cccccc; text-align:center; color: #ffffff; padding: 2px 5px 2px 5px; mso-padding-left-alt: 0; margin-left:5px;" bgcolor="#cccccc">
+                                        <a class="pc-font-alt" style="display: inline-block; text-decoration: none; font-variant-ligatures: normal; font-family: 'Inter', Arial, Helvetica, sans-serif; font-weight: 500; font-size: 16px; line-height: 24px; letter-spacing: -0.2px; text-align: center; color: #000000;" target="_blank"><span style="display: block;"><span>In-Person</span></span></a>
+                                    </td>
+                </tr>
+            </table>
+            <![endif]-->
+                                               <!--[if !mso]><!-- -->
+                                               <a style="display: inline-block; box-sizing: border-box; border-radius: 5px 5px 5px 5px; background-color: #cccccc; padding: 2px 5px 2px 5px; font-family: 'Inter', Arial, Helvetica, sans-serif; font-weight: 500; font-size: 16px; line-height: 24px; letter-spacing: -0.2px; color: #000000; vertical-align: top; text-align: center; text-align-last: center; text-decoration: none; -webkit-text-size-adjust: none;" target="_blank"><span style="display: block;"><span>In-Person</span></span></a>
+                                               <!--<![endif]-->
+                                              </th>
+                                             </tr>
+                                            </table>
+                                           </td>
+                                          </tr>
+                                         </table>
+                                        </td>
+                                       </tr>
+                                      </table>
+                                     </td>
+                                    </tr>
+                                   </table>
+                                  </td>
+                                 </tr>
+                                </table>
+                               </td>
                               </tr>
                               <tr>
                                <td align="left" valign="top">
@@ -364,7 +412,7 @@
                                     <tr>
                                      <td valign="top" align="left">
                                       <div class="pc-font-alt" style="line-height: 21px; letter-spacing: -0.2px; font-family: 'Inter', Arial, Helvetica, sans-serif; font-size: 15px; font-weight: normal; font-variant-ligatures: normal; color: #333333; text-align: left; text-align-last: left;">
-                                       <div style="text-align: start; text-align-last: start;"><span style="font-weight: 400;font-style: normal;color: rgb(17, 17, 17);">{{ events.description }}</span>
+                                       <div style="text-align: start; text-align-last: start;"><span style="font-weight: 400;font-style: normal;color: rgb(17, 17, 17);">This is an introduction to programming in Python for people with little or no previous programming experience.</span>
                                        </div>
                                       </div>
                                      </td>
@@ -390,7 +438,7 @@
             </table>
             <![endif]-->
                                    <!--[if !mso]><!-- -->
-                                   <a style="display: inline-block; box-sizing: border-box; border-radius: 8px; background-color: #000000; padding: 5px 10px 5px 10px; box-shadow: 0px 0px 0px 0px rgba(0,0,0,1); font-family: 'Inter', Arial, Helvetica, sans-serif; font-weight: 800; font-size: 16px; line-height: 24px; letter-spacing: -0.2px; color: #efefef; vertical-align: top; text-align: center; text-align-last: center; text-decoration: none; -webkit-text-size-adjust: none;" href= "{{ link }}"" target="_blank"><span style="display: block;"><span>Read More</span></span></a>
+                                   <a style="display: inline-block; box-sizing: border-box; border-radius: 8px; background-color: #000000; padding: 5px 10px 5px 10px; box-shadow: 0px 0px 0px 0px rgba(0,0,0,1); font-family: 'Inter', Arial, Helvetica, sans-serif; font-weight: 800; font-size: 16px; line-height: 24px; letter-spacing: -0.2px; color: #efefef; vertical-align: top; text-align: center; text-align-last: center; text-decoration: none; -webkit-text-size-adjust: none;" href="https://designmodo.com/postcards" target="_blank"><span style="display: block;"><span>Read More</span></span></a>
                                    <!--<![endif]-->
                                   </th>
                                  </tr>
