--- a/template2.html
+++ b/template2.html
@@ -304,7 +304,7 @@
                            </tr>
                           </table>
                          </td>
-                         <!-- {% for tag in events.tags %}
+                         {% for tag in event.tags %}
                          <td class="pc-grid-td-last pc-w620-itemsSpacings-0-30" valign="top" style="padding-top: 0px; padding-right: 0px; padding-bottom: 0px; padding-left: 5px;">
                           <table width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse: separate; border-spacing: 0; width: 100%;">
                            <tr>
@@ -352,7 +352,7 @@
                                        </tr>
                                       </table>
                                      </td>
-                                     {% endfor %} -->
+                                     {% endfor %}
 
                               </tr>
                               <tr>
@@ -625,18 +625,7 @@
                             <table width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation">
                              <tr>
                               <th valign="top" align="center" style="padding: 0px 0px 16px 0px; text-align: center; font-weight: normal; line-height: 1;">
-                               <!--[if mso]>
-        <table border="0" cellpadding="0" cellspacing="0" role="presentation" align="center" width="300" style="border-collapse: separate; border-spacing: 0; margin-right: auto; margin-left: auto;">
-            <tr>
-                <td valign="middle" align="center" style="width: 300px; border-radius: 500px 500px 500px 500px; border-top: 2px solid #ffffff; border-right: 2px solid #ffffff; border-bottom: 3px solid #ffffff; border-left: 2px solid #ffffff; background-color: transparent; text-align:center; color: #ffffff; padding: 10px 82px 10px 82px; mso-padding-left-alt: 0; margin-left:82px;" bgcolor="transparent">
-                                    <a class="pc-font-alt" style="display: inline-block; text-decoration: none; font-variant-ligatures: normal; font-family: 'Paytone One', Arial, Helvetica, sans-serif; font-weight: normal; font-size: 16px; line-height: 24px; letter-spacing: -0px; text-align: center; color: #ffffff;" href="https://arc.leeds.ac.uk/about/team/" target="_blank"><span style="display: block;"><span>The team</span></span></a>
-                                </td>
-            </tr>
-        </table>
-        <![endif]-->
-                               <!--[if !mso]><!-- -->
                                <a style="display: inline-block; box-sizing: border-box; border-top: 2px solid #ffffff; border-right: 2px solid #ffffff; border-bottom: 3px solid #ffffff; border-left: 2px solid #ffffff; border-radius: 500px 500px 500px 500px; background-color: transparent; padding: 10px 82px 10px 82px; width: 300px; font-family: 'Paytone One', Arial, Helvetica, sans-serif; font-weight: normal; font-size: 16px; line-height: 24px; letter-spacing: -0px; color: #ffffff; vertical-align: top; text-align: center; text-align-last: center; text-decoration: none; -webkit-text-size-adjust: none; mso-hide: all;" href="https://arc.leeds.ac.uk/about/team/" target="_blank"><span style="display: block;"><span>The team</span></span></a>
-                               <!--<![endif]-->
                               </th>
                              </tr>
                             </table>
