comment one event

--- a/template3.html
+++ b/template3.html
@@ -415,7 +415,7 @@
         <tr>
          <td valign="top">
           <!-- BEGIN MODULE: Event -->
-          <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
+          <!-- <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
            <tr>
             <td class="pc-w620-spacing-0-0-0-0" style="padding: 10px 0px 0px 0px;">
              <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation" style="border-collapse: separate; border-spacing: 0px;">
@@ -592,7 +592,7 @@
              </table>
             </td>
            </tr>
-          </table>
+          </table> -->
           <!-- END MODULE: Event -->
          </td>
         </tr>
