--- a/template3.html
+++ b/template3.html
@@ -412,8 +412,8 @@
           <!-- END MODULE: Event -->
          </td>
         </tr>
-        <tr>
-         <td valign="top">
+        <!-- <tr>
+         <td valign="top"> -->
           <!-- BEGIN MODULE: Event -->
           <!-- <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
            <tr>
@@ -594,8 +594,8 @@
            </tr>
           </table> -->
           <!-- END MODULE: Event -->
-         </td>
-        </tr>
+         <!-- </td>
+        </tr> -->
         <tr>
          <td valign="top">
           <!-- BEGIN MODULE: Footer -->
