--- a/template3.html
+++ b/template3.html
@@ -228,9 +228,10 @@
           <!-- END MODULE: Intro -->
          </td>
         </tr>
+        <!-- BEGIN MODULE: Event -->
+        {% for event in events %}
         <tr>
          <td valign="top">
-          <!-- BEGIN MODULE: Event -->
           <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
            <tr>
             <td class="pc-w620-spacing-0-0-0-0" style="padding: 10px 0px 0px 0px;">
@@ -409,9 +410,10 @@
             </td>
            </tr>
           </table>
-          <!-- END MODULE: Event -->
-         </td>
+        </td>
         </tr>
+        {% endfor %}
+        <!-- END MODULE: Event -->
         <!-- <tr>
          <td valign="top"> -->
           <!-- BEGIN MODULE: Event -->
