--- a/template3.html
+++ b/template3.html
@@ -372,7 +372,7 @@
                                 <tr>
                                  <td valign="top" align="left">
                                   <div class="pc-font-alt" style="line-height: 21px; letter-spacing: -0.2px; font-family: 'Inter', Arial, Helvetica, sans-serif; font-size: 15px; font-weight: normal; font-variant-ligatures: normal; color: #333333; text-align: left; text-align-last: left;">
-                                   <div style="text-align: start; text-align-last: start;"><span style="font-weight: 400;font-style: normal;color: rgb(17, 17, 17);">This is an introduction to programming in Python for people with little or no previous programming experience.</span>
+                                   <div style="text-align: start; text-align-last: start;"><span style="font-weight: 400;font-style: normal;color: rgb(17, 17, 17);">{{ event.summary }}</span>
                                    </div>
                                   </div>
                                  </td>
