--- a/template3.html
+++ b/template3.html
@@ -235,7 +235,7 @@
           <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
            <tr>
             <td class="pc-w620-spacing-0-0-0-0" style="padding: 10px 0px 0px 0px;">
-             <table width="200px" border="0" cellspacing="0" cellpadding="0" role="presentation" style="border-collapse: separate; border-spacing: 0px;">
+             <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation" style="border-collapse: separate; border-spacing: 0px;">
               <tr>
                <td valign="top" class="pc-w620-padding-40-0-0-0" style="padding: 20px 20px 20px 20px; border-radius: 10px 10px 10px 10px; border-top: 1px solid #cccccc; border-right: 1px solid #cccccc; border-bottom: 1px solid #cccccc; border-left: 1px solid #cccccc; background-color: #efefef;" bgcolor="#efefef">
                 <table width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation">
