--- a/template3.html
+++ b/template3.html
@@ -244,8 +244,8 @@
                    <table class="pc-width-hug pc-w620-gridCollapsed-1" height="100%" align="left" border="0" cellpadding="0" cellspacing="0" role="presentation">
                     <tr class="pc-grid-tr-first pc-grid-tr-last">
                      <td class="pc-grid-td-first pc-w620-itemsSpacings-0-30" valign="top" style="padding-top: 0px; padding-right: 5px; padding-bottom: 0px; padding-left: 0px;">
-                      <table width="50%" height="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse: separate; border-spacing: 0; width: 100%; height: 100%;">
-                       <tr>
+                      <table width="200px" height="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse: separate; border-spacing: 0; width: 100%; height: 100%;">
+                        <tr><!--  -->
                         <td align="center" valign="middle" style="background-color: #0068b1; border-radius: 10px 10px 10px 10px;">
                          <table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width: 100%;">
                           <tr>
@@ -289,7 +289,7 @@
                       </table>
                      </td>
                      <td class="pc-grid-td-last pc-w620-itemsSpacings-0-30" valign="top" style="padding-top: 0px; padding-right: 0px; padding-bottom: 0px; padding-left: 5px;">
-                      <table width="150%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse: separate; border-spacing: 0; width: 100%;">
+                      <table width="400px" border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse: separate; border-spacing: 0; width: 100%;">
                        <tr>
                         <td align="left" valign="top" style="border-radius: 10px 10px 10px 10px;">
                          <table align="left" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width: 100%;">
