--- a/template3.html
+++ b/template3.html
@@ -244,7 +244,7 @@
                    <table class="pc-width-hug pc-w620-gridCollapsed-1" height="100%" align="left" border="0" cellpadding="0" cellspacing="0" role="presentation">
                     <tr class="pc-grid-tr-first pc-grid-tr-last">
                      <td class="pc-grid-td-first pc-w620-itemsSpacings-0-30" valign="top" style="padding-top: 0px; padding-right: 5px; padding-bottom: 0px; padding-left: 0px;">
-                      <table width="100%" height="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse: separate; border-spacing: 0; width: 200px; height: 100%;">
+                      <table width="100%" height="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse: separate; border-spacing: 0;  height: 100%;">
                         <tr>
                         <td align="center" valign="middle" style="background-color: #0068b1; border-radius: 10px 10px 10px 10px;">
                          <table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width: 100%;">
@@ -270,7 +270,7 @@
                                   <div class="pc-font-alt" style="line-height: 140%; letter-spacing: -0.2px; font-family: 'Inter', Arial, Helvetica, sans-serif; font-size: 20px; font-weight: 800; font-variant-ligatures: normal; color: #ffffff; text-align: center; text-align-last: center;">
                                    <div><span>19 April</span>
                                    </div>
-                                   <div><span>26 April</span>
+                                   <div><span>26 September</span>
                                    </div>
                                    <div><span>2024</span>
                                    </div>
