--- a/template3.html
+++ b/template3.html
@@ -312,7 +312,7 @@
                               <td align="left" style="padding: 10px 0px 0px 10px;">
                                <table class="pc-width-hug pc-w620-gridCollapsed-1" align="left" border="0" cellpadding="0" cellspacing="0" role="presentation">
                                 <tr class="pc-grid-tr-first pc-grid-tr-last">
-                                 
+                                 {% for tag in event.tags %}
                                  <td class="pc-grid-td-first pc-w620-itemsSpacings-0-30" valign="top" style="padding-top: 0px; padding-right: 5px; padding-bottom: 0px; padding-left: 0px;">
                                   <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse: separate; border-spacing: 0;">
                                    <tr>
@@ -323,7 +323,7 @@
                                         <table width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation">
                                          <tr>
                                           <th valign="top" align="left" style="text-align: left; font-weight: normal; line-height: 1;">
-                                           <a style="display: inline-block; box-sizing: border-box; border-radius: 5px 5px 5px 5px; background-color: #cccccc; padding: 2px 5px 2px 5px; font-family: 'Inter', Arial, Helvetica, sans-serif; font-weight: 500; font-size: 16px; line-height: 24px; letter-spacing: -0.2px; color: #000000; vertical-align: top; text-align: center; text-align-last: center; text-decoration: none; -webkit-text-size-adjust: none;" target="_blank"><span style="display: block;"><span>2 Days</span></span></a>
+                                           <a style="display: inline-block; box-sizing: border-box; border-radius: 5px 5px 5px 5px; background-color: #cccccc; padding: 2px 5px 2px 5px; font-family: 'Inter', Arial, Helvetica, sans-serif; font-weight: 500; font-size: 16px; line-height: 24px; letter-spacing: -0.2px; color: #000000; vertical-align: top; text-align: center; text-align-last: center; text-decoration: none; -webkit-text-size-adjust: none;" target="_blank"><span style="display: block;"><span>{{ tag }}</span></span></a>
                                           </th>
                                          </tr>
                                         </table>
@@ -334,7 +334,7 @@
                                    </tr>
                                   </table>
                                  </td>
-
+                                 {% endfor %}
                                  <!-- <td class="pc-grid-td-last pc-w620-itemsSpacings-0-30" valign="top" style="padding-top: 0px; padding-right: 0px; padding-bottom: 0px; padding-left: 5px;">
                                   <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse: separate; border-spacing: 0;">
                                    <tr>
