--- a/template3.html
+++ b/template3.html
@@ -388,7 +388,7 @@
                             <table width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation">
                              <tr>
                               <th valign="top" align="right" style="padding: 0px 10px 10px 0px; text-align: right; font-weight: normal; line-height: 1;">
-                               <a style="display: inline-block; box-sizing: border-box; border-radius: 8px; background-color: #000000; padding: 5px 10px 5px 10px; box-shadow: 0px 0px 0px 0px rgba(0,0,0,1); font-family: 'Inter', Arial, Helvetica, sans-serif; font-weight: 800; font-size: 16px; line-height: 24px; letter-spacing: -0.2px; color: #efefef; vertical-align: top; text-align: center; text-align-last: center; text-decoration: none; -webkit-text-size-adjust: none;" href="https://designmodo.com/postcards" target="_blank"><span style="display: block;"><span>Read More</span></span></a>
+                               <a style="display: inline-block; box-sizing: border-box; border-radius: 8px; background-color: #000000; padding: 5px 10px 5px 10px; box-shadow: 0px 0px 0px 0px rgba(0,0,0,1); font-family: 'Inter', Arial, Helvetica, sans-serif; font-weight: 800; font-size: 16px; line-height: 24px; letter-spacing: -0.2px; color: #efefef; vertical-align: top; text-align: center; text-align-last: center; text-decoration: none; -webkit-text-size-adjust: none;" href="{{ event.url }}" target="_blank"><span style="display: block;"><span>Read More</span></span></a>
                               </th>
                              </tr>
                             </table>
